--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "framer-motion": "^12.7.4",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
