--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "framer-motion": "^12.7.4",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
