--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.7.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.507.0",
