--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.1
 cryptography==44.0.2
 defusedxml==0.7.1
 Django==5.2
+django-cleanup==9.0.0
 django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.16.0
